# geoscope-gateway

./: .gitignore  .pre-commit-config.yaml  README.md  geoscope_gateway  pyproject.toml  requirements.txt
dt-overlay/: rock-4-pps-gpio.dts  sun7i-a20-lime2-rgmii-id.dts  sun7i-a20-lime2-rgmii.dts  sun7i-a20-pps-gen-gpio.dts
examples/: Lime2.py  simple.py  test.py
src/: __init__.py  __main__.py  datetimes.py  emulator.py  file_handler.py  logger.py  main.py  monitoring.py  mqtt_cli.py  pignet.py  sensor_logger.py  timesync.py
src/geoscope_gateway/: __init__.py  __main__.py  emulator.py  logger.py  pignet.py  timesync.py
src/google_connecter/: datetimes.py  file_count.py  google_api.py
src/script/: chmod_script.sh  chmod_script2.sh  cp_rclocal.sh  cp_rclocal2.sh  reboot_router.sh  tplink_archer_c7_router_reset.py
src/sens_gateway/: datas.py  mqtt_cli.1.py  mqtt_cli.py  socket_server.1.py  socket_server.py
src/sensor-emulator/: emulator.py
src/startup_script/: rc.local  start_node_1  start_node_2  start_node_3  start_node_4  start_node_5
system/: gpio.rules  hotplug-usb-reset.sh  journal-backup@.service  journal-backup@.timer  logcheck-pignet.service  logcheck-pignet.sh  logcheck-pignet.timer  mosquitto.conf  mqtt-pignet.service  mqtt-pignet.sh  network-test.service  network-test.timer  pigArchive.sh  pigUpload@.service  pigUpload@.timer  pignet.service  pignet.sh  syslog-ng.conf  watchdog-pignet.sh
timenode-firmware/: platformio.ini
timesync/: RBIS_UDP.py  __init__.py  __main__.py  uart_sync.py
uart_time/: __init__.py  __main__.py  uart_sync.py
(+30 files in other folders)
